Fixed field width on mobile

--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -288,12 +288,10 @@ h6 {
       vertical-align: middle;
     }
 
-#mathquill .desktop {
-      width: 500px;
-}
 
     #mathquill {
     padding: 5px;
+    width: 500px;
     margin-top: 20px;
     text-align: center;
     background: #fff;
@@ -301,6 +299,10 @@ h6 {
     color: black;
     border-radius: 4px;
 }
+#mathquill .mobile {
+      width: 100% !important;
+}
+
 #keyboard-mask {
   height: 200px;
 }
